Fixed copying of deps

--- a/OpenCVSkill/skill/Makefile
+++ b/OpenCVSkill/skill/Makefile
@@ -1,6 +1,7 @@
 OPENCV_DIR := ../opencv
 OPENCV_ARTIFACTS := ${OPENCV_DIR}/artifacts/include ${OPENCV_DIR}/artifacts/lib
-DEPS := robot/deps/
+DEPS_DIR := robot/deps
+DEPS := robot/deps/lib robot/deps/include
 SKILL_BIN := robot/skill
 MPK := skill.mpk
 
@@ -17,8 +18,11 @@ ${SKILL_BIN} : ${DEPS}
 	git submodule update && cd robot/src/vendor/github.com/lazywei/go-opencv/ && git init && git checkout 76a80c792afab341300db33893a39c06b366787b
 	mind build
 
-${DEPS} : ${OPENCV_ARTIFACTS}
-	cp -R ${OPENCV_ARTIFACTS} ${DEPS}
+${DEPS} : ${DEPS_DIR} ${OPENCV_ARTIFACTS}
+	cp -R ${OPENCV_ARTIFACTS} ${DEPS_DIR}
+
+${DEPS_DIR} :
+	mkdir -p ${DEPS_DIR}
 
 ${OPENCV_ARTIFACTS} :
 	cd ${OPENCV_DIR} && mind x make
