--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -13,8 +13,8 @@ RUN wget https://github.com/mholt/caddy/releases/download/v0.9.5/caddy_linux_amd
 # Add MIND SDK
 RUN mkdir -p /.go
 ENV MIND_VERSION 0.6.1
-RUN wget https://cdn-static.vincross.com/downloads/mind/${MIND_VERSION}/mind.tar.gz
-RUN tar -xzf mind.tar.gz -C /.go && rm mind.tar.gz
+RUN wget https://hexa.csai.site/${MIND_VERSION}/mind.tar.gz
+RUN tar xf mind.tar.gz -C /.go && rm mind.tar.gz
 # Add boilerplate code for `mind init`
 ADD boilerplate /.go/src/boilerplate
 # Create folder for main entrypoint
